--- a/index.html
+++ b/index.html
@@ -39,17 +39,33 @@
           <button>Show more</button>
         </div>
         <div class="intro__blocks">
-          <div class="block">
+          <div class="intro__block">
+            <img src="./assets/images/call 1.svg" alt="" />
             <p>CALL US NOW 222-222-222</p>
-            <p>Feel free to call us</p>
+            <span>Feel free to call us</span>
           </div>
-          <div class="block">
+          <div class="intro__block">
+            <img src="./assets/images/Calendar.png" alt="" />
             <p>GET FREE APPOITMET</p>
-            <p>Free Diagnosis & Brake Checks</p>
+            <span>Free Diagnosis & Brake Checks</span>
           </div>
-          <div class="block">
+          <div class="intro__block">
+            <img src="assets/images/Location.png" alt="" />
             <p>FIND US ON MAP</p>
-            <p>New York, 1286 Ruumu Nanor</p>
+            <span>New York, 1286 Ruumu Nanor</span>
+          </div>
+        </div>
+      </div>
+      <div class="services">
+        <div class="container">
+          <h2>Our services</h2>
+          <p>View all services</p>
+          <div>
+            <div>
+              <img src="./assets/" alt="" />
+            </div>
+            <div></div>
+            <div></div>
           </div>
         </div>
       </div>
