--- a/index.html
+++ b/index.html
@@ -56,16 +56,24 @@
           </div>
         </div>
       </div>
-      <div class="services">
-        <div class="container">
-          <h2>Our services</h2>
-          <p>View all services</p>
-          <div>
-            <div>
-              <img src="./assets/" alt="" />
-            </div>
-            <div></div>
-            <div></div>
+      <div class="services container">
+        <h2>Our services</h2>
+        <a href="#">View all services</a>
+        <div class="services__blocks">
+          <div class="services__block">
+            <img src="./assets/images/diagnostic.png" alt="" />
+            <div class="overlay"></div>
+            <p>Diagnostic</p>
+          </div>
+          <div class="services__block">
+            <img src="./assets/images/tires.png" alt="" />
+            <div class="overlay"></div>
+            <p>Tires & Wheels</p>
+          </div>
+          <div class="services__block">
+            <img src="./assets/images/Engine.png" alt="" />
+            <div class="overlay"></div>
+            <p>Engines</p>
           </div>
         </div>
       </div>
