--- a/index.html
+++ b/index.html
@@ -77,6 +77,61 @@
           </div>
         </div>
       </div>
+      <div class="auto">
+        <div class="auto__inner container">
+          <div class="auto__inner__content">
+            <h2>
+              WE UNDERSTAND HOW IMPORTANT IT IS TO FIND THE RIGHT AUTO SERVICE
+            </h2>
+            <p>
+              Car repairs and maintenance can be expensive and no one wants to
+              have pay to repair damage caused by shoddy repair service. When
+              you bring your car into our auto shop, you won’t have to worry
+              because our staff is comprised of ASE certified technicians who
+              are committed to making sure you have a safe dependable car.
+            </p>
+            <a href="#">MORE ABOUT US</a>
+          </div>
+          <div>
+            <img src="./assets/images/GettyImages.png" alt="service" />
+          </div>
+        </div>
+      </div>
+      <div class="process container">
+        <h1>Fast & Easy</h1>
+        <p class="process__text">our work process</p>
+        <div class="process__blocks">
+          <div class="process__block">
+            <h3>1.Request your quote</h3>
+            <p>We will be there when you most need us</p>
+          </div>
+          <div class="process__block">
+            <h3>02. BRING YOUR VEHICLE</h3>
+            <p>We are car guys at heart</p>
+          </div>
+          <div class="process__block">
+            <h3>03. Get it repaired</h3>
+            <p>High quality, low cost car servicing</p>
+          </div>
+        </div>
+      </div>
+      <div class="contact">
+        <div class="contact__inner container">
+          <h1>Contact us</h1>
+          <div class="contact__inner-input">
+            <div class="contact__inner-list">
+              <input type="text" placeholder="Name" required />
+              <input type="text" placeholder="Last name" required />
+            </div>
+            <div class="contact__inner-list">
+              <input type="text" placeholder="Email" required />
+              <input type="text" placeholder="Phone" required />
+            </div>
+          </div>
+          <textarea name="" id="" placeholder="Message"></textarea>
+          <button>Send</button>
+        </div>
+      </div>
     </main>
   </body>
 </html>
