--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
           <button>Send</button>
         </div>
       </div>
+      <div class="footer container">
+        <p>© 2021 Auto theme by Frontend Tricks</p>
+        <div class="footer__icons">
+          <img src="./assets/images/in.png" alt="" />
+          <img src="./assets/images/facebook.png" alt="" />
+          <img src="./assets/images/instagram.svg" alt="" />
+        </div>
+      </div>
     </main>
   </body>
 </html>
